Feat/FIX: include login, settings and adjust chat

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IA VONIX</title>
-    <meta name="description" content="Projeto IA Vonix" />
+    <title>chatty-voix</title>
+    <meta name="description" content="Project IA Vonix" />
     <meta name="author" content="Alexandre Dias" />
   </head>
 
